ros_dev_ws/log/build_2021-03-11_16-53-45/lora/stderr.log
  File "/home/pop/Documents/wqdrone/ros_dev_ws/install/lora/lib/python3.8/site-packages/lora/lora_group.py", line 31
    
    ^
SyntaxError: unexpected EOF while parsing

